--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -1281,7 +1281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msa_df = pd.read_csv(f'{data_dir}export_msa_69.csv', index_col=0)\n",
+    "msa_df = pd.read_csv(f'{data_dir}.csv', index_col=0)\n",
     "msa_df = msa_df[msa_df.index != 'consensus']\n",
     "msa_df = msa_df[msa_df.index != 'reference']"
    ]
