--- a/notebooks/xgboost.ipynb
+++ b/notebooks/xgboost.ipynb
@@ -65,7 +65,6 @@
    "source": [
     "import xgboost as xgb\n",
     "from sklearn import metrics\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -414,8 +413,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This version does not work at all times, \n",
+    "# def scale_labels(x, classes=[]):\n",
+    "#     return np.where(classes == x)[0][0]\n",
+    "\n",
     "def scale_labels(x, classes=[]):\n",
-    "    return np.where(classes == x)[0][0]"
+    "    \"\"\"Scaling down labels to be [0, num_classes)\"\"\"\n",
+    "    return classes.index(x)  # np.where(classes == x)[0][0]"
    ]
   },
   {
